FindThread()
if(ENABLE_SSL)
    FindOpenssl()
endif()

function(add_skp_executable name)
	message(STATUS "add one test : ${name} ...")
	add_executable(${name} ${name}.c)
	set_target_properties(${name} PROPERTIES INSTALL_RPATH "${LIBRARY_OUTPUT_PATH}")
	target_compile_options(${name} PRIVATE -std=gnu11)
	target_link_libraries(${name} skp threads_internal)
	if (TARGET openssl_internal)
		target_link_libraries(${name} skp openssl_internal)
	endif()
endfunction()

add_subdirectory(utils)
add_subdirectory(adt)
add_subdirectory(algorithm)
add_subdirectory(mm)
add_subdirectory(process)
add_subdirectory(server)